# python-project-52

./: .flake8  .gitignore  Makefile  README.md  build.sh  db.sqlite  hello.py  pyproject.toml
hexlet_code/: asgi.py  settings.py  urls.py  wsgi.py
locale/en/LC_MESSAGES/: django.mo  django.po
locale/en_US/LC_MESSAGES/: django.mo  django.po
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: forms.py  models.py  settings.py  tests.py  urls.py  views.py  wsgi.py
task_manager/fixtures/: statuses.json  test_tasks.json  test_users.json  users.json
task_manager/labels/: views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/labels/tests/: test_forms.py  test_models.py  test_views.py  testcase.py
task_manager/migrations/: 0002_status_created_at_alter_status_name.py  0003_tag_alter_status_name_task.py  0004_alter_task_performer.py  0005_task_description_alter_task_status_alter_task_tags.py  0006_remove_task_author_task_created_by_and_more.py  0007_rename_performer_to_executor.py  0008_rename_tag_to_label.py
task_manager/statuses/: views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/fixtures/: labels.json  statuses.json  tasks.json  users.json
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py  0002_status_created_at_alter_status_name.py  0003_tag_alter_status_name_task.py  (+5 more)
task_manager/users/: admin.py  views.py
tasks/: tests.py  views.py
tasks/fixtures/: labels.json  tasks.json
(+47 files in other folders)
