[project]
name = "hexlet-code"
version = "0.1.0"
description = "Task Manager"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=2.3.0",
    "django>=5.1.5",
    "django-bootstrap5>=24.3",
    "gunicorn>=23.0.0",
    "psycopg>=3.2.4",
    "python-dotenv>=1.0.1",
    "rollbar>=1.3.0",
    "uvicorn>=0.34.0",
    "whitenoise>=6.9.0",
]

[dependency-groups]
dev = [
    "flake8>=7.1.1",
]
